// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Input /> Rendering should render the component 1`] = `
<input
  className="search-input"
  onInput={[Function]}
  onKeyPress={[Function]}
  placeholder="Start typing..."
  type="text"
  value=""
/>
`;

exports[`<Input /> Rendering should render the component with a proper placeholder  1`] = `
<input
  className="search-input"
  onInput={[Function]}
  onKeyPress={[Function]}
  placeholder="testing Input.."
  type="text"
  value=""
/>
`;

exports[`<Input /> Rendering should render the component with default props  1`] = `
<input
  className="search-input"
  onInput={[Function]}
  onKeyPress={[Function]}
  placeholder="Start typing..."
  type="text"
  value=""
/>
`;
